# secret-service

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ss/: __init__.py  config.py  server.py
src/ss/agents/: base.py  judge.py  jury.py  master.py  mission.py  reception.py  strategist.py  taktik_planner.py
src/ss/agents/council/: __init__.py  chairman.py  council.py  member.py  personas.py
src/ss/blackboard/: database.py  models.py  repository.py  schema.sql
src/ss/intel/: __init__.py  code_index.py
src/ss/loop/: __init__.py  branch_loop.py  postcondition.py  progress.py
src/ss/memory/: cleanup.py  client_profile.py  manager.py  project_memory.py
src/ss/pipeline/: branch.py  events.py  runner.py
src/ss/sampling/: adapter.py  factory.py  openrouter.py  per_agent.py
src/ss/skills/: __init__.py  finder.py  resolver.py
src/ss/vectors/: encoder.py  store.py
tests/: conftest.py
tests/test_agents/: test_base.py  test_judge.py  test_jury.py  test_master.py  test_mission.py  test_reception.py  test_strategist.py  test_taktik_planner.py
tests/test_blackboard/: test_database.py  test_models.py  test_repository.py
tests/test_integration/: test_full_pipeline.py
tests/test_memory/: test_cleanup.py  test_manager.py
tests/test_pipeline/: test_branch.py  test_events.py
tests/test_sampling/: test_adapter.py
tests/test_vectors/: test_encoder.py  test_store.py
