[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ss"
version = "0.1.0"
description = "Multi-agent problem-solving MCP server with observability and learning"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "aiosqlite>=0.19",
    "sqlite-vss>=0.1.2",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
]

[project.scripts]
ss = "ss.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
